--- a/templates/ratearant/base.html
+++ b/templates/ratearant/base.html
@@ -3,10 +3,12 @@
 <html>
     <link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}">
     <link rel="stylesheet" href="{% static 'ratearant/CSS/headers.css' %}">
+
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <title>
             Rate-A-Rant - 
