--- a/templates/ratearant/base.html
+++ b/templates/ratearant/base.html
@@ -40,6 +40,8 @@
         <div class="text-end">
             {% if user.is_authenticated %}
                 <button type="button" onclick="location.href='{% url 'ratearant:logout' %}';" class="btn btn-light me-2">Logout</button>
+                <button type="button" onclick="location.href='{% url 'ratearant:my_comments' %}';" class="btn btn-light me-2">Comments</button>
+                <button type="button" onclick="location.href='{% url 'ratearant:edit_profile' %}';" class="btn btn-light me-2">Edit profile</button>
             {% else %}
                 <button type="button" onclick="location.href='{% url 'ratearant:login' %}';" class="btn btn-light me-2">Login</button>
                 <button type="button" onclick="location.href='{% url 'ratearant:register' %}';" class="btn btn-light">Register</button>
