--- a/templates/ratearant/restaurant.html
+++ b/templates/ratearant/restaurant.html
@@ -10,6 +10,7 @@
 {% endblock %}
 
 {% block body_block %}
+<link rel="stylesheet" href="{% static 'ratearant/CSS/map.css' %}">
 <div class="container">
     <div class="row mb-3">
 
@@ -30,6 +31,11 @@
                                 <li>Food style: {{ restaurant.cuisine.cuisineName }}</li>
                             </ul>
                         </div>
+
+                        <div id='map' style="position:relative;width:400px;height:300px;"></div>
+                        <div id='restaurantAddress' style ="visibility: hidden;">{{ restaurant.address }}</div>
+                        <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?key=AmW-lS1nYIT1gQDljYAjWAyJ-1dR0owV3ihYbMsoJpxCaBqbB-KiBctCW_3vgSrx&callback=loadMapScenario' async defer></script>
+                        
                     <a href="{% url 'ratearant:home' %}" class="btn btnRed">Back</a>
                     </div>
                 </div>
@@ -102,5 +108,6 @@
     </div>
 </div>
 <script src="{% static 'ratearant/scripts/randomrantimage.js' %}"></script>
+<script src="{% static 'ratearant/scripts/map.js' %}"></script>
 {% endblock %}
 
