--- a/templates/ratearant/restaurant.html
+++ b/templates/ratearant/restaurant.html
@@ -35,7 +35,9 @@
                         <div id='map' style="position:relative;width:400px;height:300px;"></div>
                         <div id='restaurantAddress' style ="visibility: hidden;">{{ restaurant.address }}</div>
                         <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?key=AmW-lS1nYIT1gQDljYAjWAyJ-1dR0owV3ihYbMsoJpxCaBqbB-KiBctCW_3vgSrx&callback=loadMapScenario' async defer></script>
-                        
+                        {% if user.is_authenticated and not reviewed%}
+                            <a href="{% url 'ratearant:add_review' restaurant_name_slug=restaurant.slug %}" class="btn btnRed">Add Review</a>
+                        {% endif %}
                     <a href="{% url 'ratearant:home' %}" class="btn btnRed">Back</a>
                     </div>
                 </div>
