javascript on login update

--- a/templates/ratearant/login.html
+++ b/templates/ratearant/login.html
@@ -13,15 +13,15 @@
         <h4>Login to Rate-A-Rant</h4>
         <form id="login_form" method="post" action="{% url 'ratearant:login' %}">
             {% csrf_token %}
-            <div style="margin-bottom: 10px;">
-                <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" id="changeImageLeft" alt="Site icon" style="width: 130px; height: 130px; float: left; margin-right: 10px;"/>
-                Username: <input type="text" name="username" value="" size="50" />
-                <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" id="changeImageRight" alt="Site icon" style="width: 130px; height: 130px; float: right; margin-left: 10px;"/>
+            <div style="margin-bottom: 20px;">
+                <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" id="changeImageLeft" alt="Site icon" style="width: 130px; height: 130px; float: left; margin-left: 100px;"/>
+                Username: <input type="text" name="username" value="" size="30" />
+                <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" id="changeImageRight" alt="Site icon" style="width: 130px; height: 130px; float: right; margin-right: 100px;"/>
             </div>
-            <div style="margin-bottom: 10px;">
-                Password: <input type="password" name="password" value="" size="50" />
+            <div style="margin-bottom: 20px;">
+                Password: <input type="password" name="password" value="" size="30" />
             </div>
-            <div style="text-align: center;"> 
+            <div style="text-align: center; margin-bottom: 20px;"> 
                 <input type="submit" name="submit" value="Submit" class="btn btnRed" style="margin: 0 auto;" />
             </div>
             {% if error_message %}
