--- a/templates/ratearant/base.html
+++ b/templates/ratearant/base.html
@@ -42,6 +42,7 @@
                 <button type="button" onclick="location.href='{% url 'ratearant:logout' %}';" class="btn btn-light me-2">Logout</button>
                 <button type="button" onclick="location.href='{% url 'ratearant:my_comments' %}';" class="btn btn-light me-2">My Reviews</button>
                 <button type="button" onclick="location.href='{% url 'ratearant:edit_profile' %}';" class="btn btn-light me-2">Edit profile</button>
+                <button type="button" onclick="location.href='{% url 'ratearant:add_restaurant' %}';" class="btn btn-light me-2">Add Restaurant</button>
             {% else %}
                 <button type="button" onclick="location.href='{% url 'ratearant:login' %}';" class="btn btn-light me-2">Login</button>
                 <button type="button" onclick="location.href='{% url 'ratearant:register' %}';" class="btn btn-light">Register</button>
