css all made external

--- a/templates/ratearant/about.html
+++ b/templates/ratearant/about.html
@@ -6,9 +6,11 @@
 {% endblock %}
 
 {% block body_block %}
-    <div class="pTextRed" style="text-align: center;">
+
+    <div class="pTextRedCentred">
     <p>Welcome to Ratearant. The best place for all of your restaurant rating, reviewing and discovering needs! Search through all the best restaurants and share your own opinions with Ratearant!</p>
     </div>
+
 {% endblock %}
 
 {% block block_footer %}
