--- a/templates/ratearant/register.html
+++ b/templates/ratearant/register.html
@@ -8,7 +8,7 @@
 {% block body_block %}
 <link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}"> <!-- don't know why I'm having to add this in order to make line 
                                                                                       29 show up correctly-->
-    <div class="pTextRed" style="text-align: center;">
+    <div class="pTextRedCentred">
         {% if registered %}
             <h4>Thank you for registering!</h4>
             <a href="{% url 'ratearant:home' %}">Return to the homepage.</a><br />
@@ -17,7 +17,7 @@
             <form id="user_form" method="post" action="{% url 'ratearant:register' %}" enctype="multipart/form-data" style="display: inline-block; text-align: left;">
                 {% csrf_token %}
                 
-                <div style="text-align: left;"> 
+                <div class="textLeft"> 
                     <!--<img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" id="changeImageLeft" alt="Site icon" style="width: 130px; height: 130px; float: left; margin-left: 10px;"/>-->
                     {{ user_form.username.label_tag }}{{ user_form.username }}
                     <!--<img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" id="changeImageRight" alt="Site icon" style="width: 130px; height: 130px; float: right; margin-right: 10px;"/>-->
@@ -50,7 +50,7 @@
                     {% endfor %}
                 </div>
 
-                <div class="pTextRed" style="text-align: center;"> 
+                <div class="pTextRedCentred"> 
                     <input type="submit" name="submit" value="Register" class="btn btnRed" style="margin: 0 auto;" />
                 </div>
 
