--- a/templates/ratearant/base.html
+++ b/templates/ratearant/base.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="{% static 'ratearant/CSS/headers.css' %}">
 
     <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
@@ -84,6 +85,7 @@
                     </div>
                 {% endif %}
        {% block block_footer %}
+       <script src="{% static 'ratearant/scripts/changeButton.js' %}"></script>
        {% endblock %}
             </div>
         </div>
