change button colour

--- a/static/ratearant/CSS/styles.css
+++ b/static/ratearant/CSS/styles.css
@@ -77,9 +77,7 @@ h1 {
 }
 
 .btnGreen {
-    background-color: green !important;
-    color: white !important;
-    width: auto!important;
+    background-color: pink 
 }
 
 .flexAndCentre {
