change button colour

--- a/static/ratearant/CSS/styles.css
+++ b/static/ratearant/CSS/styles.css
@@ -76,8 +76,8 @@ h1 {
     width: auto!important;
 }
 
-.btnGreen {
-    background-color: pink 
+.btnRedChange {
+    background-color: #95090d 
 }
 
 .flexAndCentre {
