--- a/templates/ratearant/restaurant.html
+++ b/templates/ratearant/restaurant.html
@@ -58,11 +58,11 @@
                                     {% if review.foodRating >= 4 %}
                                     <span class="badge badge-primary badge-pill">
                                         {{ review.foodRating }}
-
+                                    </span>>
                                      {% elif review.foodRating > 2 %}
                                     <span class="badge badge-warning badge-pill">
                                         {{ review.foodRating }}
-
+                                    </span>
                                     {% else %}
                                     <span class="badge badge-danger badge-pill">
                                         {{ review.foodRating }}
@@ -74,11 +74,11 @@
                                     {% if review.serviceRating >= 4 %}
                                         <span class="badge badge-primary badge-pill">
                                         {{ review.serviceRating }}
-
+                                        </span>>
                                      {% elif review.serviceRating > 2 %}
                                     <span class="badge badge-warning badge-pill">
                                         {{ review.serviceRating }}
-
+                                    </span>
                                     {% else %}
                                     <span class="badge badge-danger badge-pill">
                                         {{ review.serviceRating }}
@@ -90,11 +90,11 @@
                                     {% if review.overallRating >= 4 %}
                                     <span class="badge badge-primary badge-pill">
                                         {{ review.overallRating }}
-
+                                    </span>
                                      {% elif review.overallRating > 2 %}
                                     <span class="badge badge-warning badge-pill">
                                         {{ review.overallRating }}
-
+                                    </span>
                                     {% else %}
                                     <span class="badge badge-danger badge-pill">
                                         {{ review.overallRating }}
