--- a/templates/ratearant/my_comments.html
+++ b/templates/ratearant/my_comments.html
@@ -2,7 +2,7 @@
 
 {% block body_block %}
 <div class="container">
-    <h2>My Comments</h2>
+    <h2>My Reviews</h2>
     <ul>
         {% for comment in comments %}
         <div class="card">
@@ -17,11 +17,11 @@
                             {% if comment.foodRating >= 4 %}
                             <span class="badge badge-primary badge-pill">
                                 {{ comment.foodRating }}
-
+                            </span>
                              {% elif comment.foodRating > 2 %}
                             <span class="badge badge-warning badge-pill">
                                 {{ comment.foodRating }}
-
+                            </span>
                             {% else %}
                             <span class="badge badge-danger badge-pill">
                                 {{ comment.foodRating }}
@@ -33,11 +33,11 @@
                             {% if comment.serviceRating >= 4 %}
                                 <span class="badge badge-primary badge-pill">
                                 {{ comment.serviceRating }}
-
+                            </span>
                              {% elif comment.serviceRating > 2 %}
                             <span class="badge badge-warning badge-pill">
                                 {{ comment.serviceRating }}
-
+                            </span>
                             {% else %}
                             <span class="badge badge-danger badge-pill">
                                 {{ comment.serviceRating }}
@@ -49,11 +49,11 @@
                             {% if comment.overallRating >= 4 %}
                             <span class="badge badge-primary badge-pill">
                                 {{ comment.overallRating }}
-
+                            </span>
                              {% elif comment.overallRating > 2 %}
                             <span class="badge badge-warning badge-pill">
                                 {{ comment.overallRating }}
-
+                            </span>
                             {% else %}
                             <span class="badge badge-danger badge-pill">
                                 {{ comment.overallRating }}
@@ -66,7 +66,7 @@
             </div>
         </div>
         {% empty %}
-        <li>No comments to display.</li>
+        <li>No reviews to display.</li>
         {% endfor %}
     </ul>
 </div>
