--- a/templates/ratearant/register.html
+++ b/templates/ratearant/register.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="pTextRedCentred"> 
-                    <input type="submit" name="submit" value="Register" class="btn btnRed" style="margin: 0 auto;" />
+                    <input type="submit" name="submit" value="Register" class="btn btnRedRegister" />
                 </div>
 
             </form>
