--- a/templates/ratearant/login.html
+++ b/templates/ratearant/login.html
@@ -7,22 +7,22 @@
 
 {% block body_block %}
 
-<link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}"> <!-- don't know why I'm having to add this in order to make line 
-                                                                                  20 show up correctly-->
+<link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}">
+<script src="{% static 'ratearant/scripts/scriptsTest.js' %}"></script>
     <div class="pTextRedCentred">
         <h4>Login to Rate-A-Rant</h4>
         <form id="login_form" method="post" action="{% url 'ratearant:login' %}">
             {% csrf_token %}
             <div class="loginMargin">
-                <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" id="changeImageLeft" alt="Site icon" style="width: 130px; height: 130px; float: left; margin-left: 100px;"/>
+                <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" id="changeImageLeft" alt="Site icon" class="sizesForChangeImageLeft"/>
                 Username: <input type="text" name="username" value="" size="30" />
-                <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" id="changeImageRight" alt="Site icon" style="width: 130px; height: 130px; float: right; margin-right: 100px;"/>
+                <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" id="changeImageRight" alt="Site icon" class="sizesForChangeImageRight"/>
             </div>
             <div class="loginMargin">
                 Password: <input type="password" name="password" value="" size="30" />
             </div>
             <div class="submitCentreMargin"> 
-                <input type="submit" name="submit" value="Submit" class="btn btnRed" style="margin: 0 auto;" />
+                <input type="submit" name="submit" value="Submit" class="btn btnRed"/>
             </div>
             {% if error_message %}
             <div class="error-message">
@@ -31,8 +31,6 @@
             {% endif %}            
         </form>
     </div>
-
-    <script src="{% static 'ratearant/scripts/scriptsTest.js' %}"></script>
  
 {% endblock %}
 
