fixed nav bar turning blue on about and cuisine page

--- a/templates/ratearant/food_styles.html
+++ b/templates/ratearant/food_styles.html
@@ -6,6 +6,8 @@
 {% endblock %}
 
 {% block body_block %}
+
+    <link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}">
     <div class="flexAndCentre">
     {% for cuisine in cuisines %}
 
