--- a/templates/ratearant/about.html
+++ b/templates/ratearant/about.html
@@ -6,7 +6,8 @@
 {% endblock %}
 
 {% block body_block %}
-
+    
+<link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}">
     <script src="{% static 'ratearant/scripts/scriptsTest.js' %}"></script>
 
     <div class="pTextRedCentred">
