--- a/templates/ratearant/restaurant.html
+++ b/templates/ratearant/restaurant.html
@@ -17,9 +17,10 @@
         <div class="col-md-7">
             {% if restaurant %}
                 <div class="card">
-                    <img id="restaurantpic" class="card-img-top img-fluid randomRestImage"
+                    <img attrrestaurantpic class="card-img-top img-fluid randomRestImage"
                          src=""
-                         alt="restaurant picture" >
+                         alt="restaurant picture" 
+                         style="height: 400px !important;">
                     <div class="card-body">
                     <h5 class="card-title">{{ restaurant.name }}</h5>
                         <div>
