fixed navbar colour

--- a/templates/ratearant/restaurant.html
+++ b/templates/ratearant/restaurant.html
@@ -10,6 +10,7 @@
 {% endblock %}
 
 {% block body_block %}
+<link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}">
 <link rel="stylesheet" href="{% static 'ratearant/CSS/map.css' %}">
 <div class="container">
     <div class="row mb-3">
