final css changes

--- a/templates/ratearant/add_restaurant.html
+++ b/templates/ratearant/add_restaurant.html
@@ -12,7 +12,7 @@
         <form method="post" class="form-container">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btnRed">Submit</button>
+            <button type="submit" class="btn btnRedRegister">Submit</button>
         </form>
     </div>
 </div>
