--- a/templates/ratearant/my_comments.html
+++ b/templates/ratearant/my_comments.html
@@ -1,6 +1,9 @@
 {% extends 'ratearant/base.html' %}
+{% load static %}
 
 {% block body_block %}
+
+<link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}">
 <div class="container">
     <h2>My Reviews</h2>
     <ul>
