--- a/templates/ratearant/about.html
+++ b/templates/ratearant/about.html
@@ -7,7 +7,7 @@
 
 {% block body_block %}
     
-commi<link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}">
+<link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}">
     <script src="{% static 'ratearant/scripts/scriptsTest.js' %}"></script>
 
     <div class="pTextRedCentred">
