fixed some styling

--- a/templates/ratearant/categories.html
+++ b/templates/ratearant/categories.html
@@ -11,6 +11,8 @@
 {% endblock %}
 
 {% block body_block %}
+<link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}">
+
     <div class="flexAndCentre">
         <div class="categoriesCards">
             <h4 class="headerTextGold">{{cuisine.cuisineName}}</h4>
